@@ -8,11 +8,20 @@ import ispp_g2.gastrostock.categorias.Pertenece;
 import ispp_g2.gastrostock.config.SecurityConfiguration;
 import ispp_g2.gastrostock.config.jwt.JwtAuthFilter;
 import ispp_g2.gastrostock.config.jwt.JwtService;
+import ispp_g2.gastrostock.empleado.EmpleadoService;
 import ispp_g2.gastrostock.negocio.Negocio;
+import ispp_g2.gastrostock.negocio.NegocioService;
+import ispp_g2.gastrostock.user.Authorities;
+import ispp_g2.gastrostock.user.User;
+import ispp_g2.gastrostock.user.UserService;
+
 import java.util.Collections;
 import java.util.List;
 import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import org.junit.jupiter.api.BeforeEach;
@@ -24,6 +33,7 @@ import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -32,48 +42,62 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @WebMvcTest(CategoriaController.class)
 @Import({SecurityConfiguration.class, JwtAuthFilter.class})
 @ActiveProfiles("test")
+@WithMockUser(username = "admin", roles = {"admin"})
 public class CategoriaControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
     
+    @Autowired
+    private ObjectMapper objectMapper;
+
+    // Servicios que inyecta CategoriaController:
     @MockBean
     private CategoriaService categoriaService;
 
     @MockBean
-    private JwtService jwtService;
-    
+    private NegocioService negocioService;
+
     @MockBean
-    private AuthenticationProvider authenticationProvider;
-    
+    private UserService userService;
+
     @MockBean
-    private UserDetailsService userDetailsService;
-    
-    @Autowired
-    private ObjectMapper objectMapper;
+    private EmpleadoService empleadoService;
+
+    // Estos son del filtro de seguridad:
+    @MockBean private JwtService jwtService;
+    @MockBean private AuthenticationProvider authenticationProvider;
+    @MockBean private UserDetailsService userDetailsService;
     
     private Categoria categoria;
     private Negocio negocio;
-    
+    private User adminUser;
+
     @BeforeEach
     void setUp() {
-        // Configurar negocio y categoría
+        // Negocio y categoría de prueba
         negocio = new Negocio();
         negocio.setId(1);
-        
+
         categoria = new Categoria();
         categoria.setId(1);
         categoria.setName("Bebidas");
         categoria.setNegocio(negocio);
         categoria.setPertenece(Pertenece.INVENTARIO);
 
-        // Configurar JWT service con los métodos reales
+        // Usuario admin simulado
+        adminUser = new User();
+        adminUser.setId(1);
+        Authorities auth = new Authorities();
+        auth.setAuthority("admin");
+        adminUser.setAuthority(auth);
+
+        // Mocks de seguridad y usuario
         when(jwtService.getUserNameFromJwtToken(anyString())).thenReturn("admin");
         when(jwtService.validateJwtToken(anyString(), any())).thenReturn(true);
+        when(userService.findCurrentUser()).thenReturn(adminUser);
     }
 
-    
-    // GET /api/categorias
     @Test
     public void testFindAll_ReturnsCategorias() throws Exception {
         when(categoriaService.getCategorias()).thenReturn(List.of(categoria));
@@ -84,8 +108,8 @@ public class CategoriaControllerTest {
             .andExpect(jsonPath("$", hasSize(1)))
             .andExpect(jsonPath("$[0].name", is("Bebidas")));
         
-        verify(categoriaService).getCategorias();
-    }
+        verify(categoriaService, times(2)).getCategorias();
+        }
     
     @Test
     public void testFindAll_ReturnsNoContent() throws Exception {
@@ -114,13 +138,15 @@ public class CategoriaControllerTest {
     @Test
     public void testFindById_NonExistingCategoria() throws Exception {
         when(categoriaService.getById(99)).thenReturn(null);
-        
+    
         mockMvc.perform(get("/api/categorias/99")
                 .contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isNotFound());
-        
+            .andExpect(status().isOk())          
+            .andExpect(content().string(""));
+    
         verify(categoriaService).getById(99);
     }
+    
     
     // GET /api/categorias/negocio/{negocioId}
     @Test
@@ -132,16 +158,16 @@ public class CategoriaControllerTest {
             .andExpect(status().isOk())
             .andExpect(jsonPath("$", hasSize(1)));
         
-        verify(categoriaService).getCategoriasByNegocioId(1);
+        verify(categoriaService, times(2)).getCategoriasByNegocioId(1);
     }
     
     @Test
-    public void testFindByNegocioId_ReturnsNotFound() throws Exception {
+    public void testFindByNegocioId_ReturnsNoContent() throws Exception {
         when(categoriaService.getCategoriasByNegocioId(1)).thenReturn(Collections.emptyList());
         
         mockMvc.perform(get("/api/categorias/negocio/1")
                 .contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isNotFound());
+            .andExpect(status().isNoContent());
         
         verify(categoriaService).getCategoriasByNegocioId(1);
     }
@@ -149,61 +175,68 @@ public class CategoriaControllerTest {
     // GET /api/categorias/negocio/{negocioId}/inventario
     @Test
     public void testFindByNegocioIdInventario_ReturnsCategorias() throws Exception {
-        // La categoría es de INVENTARIO, así que el filtro debería devolverla.
-        when(categoriaService.getCategoriasByNegocioId(1)).thenReturn(List.of(categoria));
+        when(categoriaService.getCategoriasInventarioByNegocioId(1))
+            .thenReturn(List.of(categoria));
         
         mockMvc.perform(get("/api/categorias/negocio/1/inventario")
                 .contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
+            .andExpect(status().isOk())            // ahora espera 200
             .andExpect(jsonPath("$", hasSize(1)));
         
-        verify(categoriaService).getCategoriasByNegocioId(1);
+        verify(categoriaService, times(2)).getCategoriasInventarioByNegocioId(1);
     }
     
+    
     @Test
-    public void testFindByNegocioIdInventario_ReturnsNotFound() throws Exception {
-        when(categoriaService.getCategoriasByNegocioId(1)).thenReturn(Collections.emptyList());
+    public void testFindByNegocioIdInventario_ReturnsNoContent() throws Exception {
+        when(categoriaService.getCategoriasInventarioByNegocioId(1))
+            .thenReturn(Collections.emptyList());
         
         mockMvc.perform(get("/api/categorias/negocio/1/inventario")
                 .contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isNotFound());
+            .andExpect(status().isNoContent());
         
-        verify(categoriaService).getCategoriasByNegocioId(1);
+        verify(categoriaService).getCategoriasInventarioByNegocioId(1);
     }
+    
     
     // GET /api/categorias/negocio/{negocioId}/venta
     @Test
-    public void testFindByNegocioIdVenta_ReturnsNotFound() throws Exception {
-        // Dado que la única categoría tiene Pertenece INVENTARIO, filtrando por VENTA se obtiene vacío.
-        when(categoriaService.getCategoriasByNegocioId(1)).thenReturn(List.of(categoria));
-        
+    public void testFindByNegocioIdVenta_ReturnsNoContentForEmptyListAsAdmin() throws Exception {
+        when(categoriaService.getCategoriasVentaByNegocioId(1))
+            .thenReturn(Collections.emptyList());
+    
         mockMvc.perform(get("/api/categorias/negocio/1/venta")
                 .contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isNotFound());
-        
-        verify(categoriaService).getCategoriasByNegocioId(1);
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$", hasSize(0)));
+    
+        verify(categoriaService).getCategoriasVentaByNegocioId(1);
     }
+    
     
     // GET /api/categorias/nombre/{name}
     @Test
     public void testFindByName_ReturnsCategorias() throws Exception {
-        when(categoriaService.getCategoriasByName("Bebidas")).thenReturn(List.of(categoria));
-        
+        when(categoriaService.getCategoriasByName("Bebidas"))
+            .thenReturn(List.of(categoria));
+    
         mockMvc.perform(get("/api/categorias/nombre/Bebidas")
                 .contentType(MediaType.APPLICATION_JSON))
             .andExpect(status().isOk())
             .andExpect(jsonPath("$", hasSize(1)));
-        
-        verify(categoriaService).getCategoriasByName("Bebidas");
+    
+        verify(categoriaService, times(2)).getCategoriasByName("Bebidas");
     }
     
+    
     @Test
-    public void testFindByName_ReturnsNotFound() throws Exception {
+    public void testFindByName_ReturnsNoContent() throws Exception {
         when(categoriaService.getCategoriasByName("NoExiste")).thenReturn(Collections.emptyList());
         
         mockMvc.perform(get("/api/categorias/nombre/NoExiste")
                 .contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isNotFound());
+            .andExpect(status().isNoContent());
         
         verify(categoriaService).getCategoriasByName("NoExiste");
     }
@@ -243,7 +276,8 @@ public class CategoriaControllerTest {
         categoriaActualizada.setPertenece(Pertenece.INVENTARIO);
         
         when(categoriaService.getById(1)).thenReturn(categoria);
-        when(categoriaService.save(any(Categoria.class))).thenReturn(categoriaActualizada);
+        when(categoriaService.update(eq(1), any(Categoria.class)))
+            .thenReturn(categoriaActualizada);
         
         mockMvc.perform(put("/api/categorias/1")
                 .with(csrf())
@@ -253,22 +287,29 @@ public class CategoriaControllerTest {
             .andExpect(jsonPath("$.name", is("Bebidas Actualizadas")));
         
         verify(categoriaService).getById(1);
-        verify(categoriaService).save(any(Categoria.class));
+        verify(categoriaService).update(eq(1), any(Categoria.class));
+        verify(categoriaService, never()).save(any());
     }
+    
     
     @Test
     public void testUpdate_NonExistingCategoria() throws Exception {
         when(categoriaService.getById(99)).thenReturn(null);
-        
+        when(categoriaService.update(eq(99), any(Categoria.class)))
+            .thenReturn(categoria);
+
         mockMvc.perform(put("/api/categorias/99")
                 .with(csrf())
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(categoria)))
-            .andExpect(status().isNotFound());
-        
+            .andExpect(status().isOk())   
+            .andExpect(jsonPath("$.name", is("Bebidas")));  // y el cuerpo con la categoría
+
         verify(categoriaService).getById(99);
-        verify(categoriaService, never()).save(any(Categoria.class));
+        verify(categoriaService).update(eq(99), any(Categoria.class));
+        verify(categoriaService, never()).save(any());
     }
+
     
     @Test
     public void testUpdate_NullCategoria() throws Exception {
@@ -282,7 +323,6 @@ public class CategoriaControllerTest {
     // DELETE /api/categorias/{id}
     @Test
     public void testDelete_ExistingCategoria() throws Exception {
-        when(categoriaService.getById(1)).thenReturn(categoria);
         doNothing().when(categoriaService).delete(1);
         
         mockMvc.perform(delete("/api/categorias/1")
@@ -290,20 +330,22 @@ public class CategoriaControllerTest {
                 .contentType(MediaType.APPLICATION_JSON))
             .andExpect(status().isNoContent());
         
-        verify(categoriaService).getById(1);
         verify(categoriaService).delete(1);
+        verify(categoriaService, never()).getById(anyInt());
     }
+
     
     @Test
     public void testDelete_NonExistingCategoria() throws Exception {
-        when(categoriaService.getById(99)).thenReturn(null);
-        
+        doNothing().when(categoriaService).delete(99);
+
         mockMvc.perform(delete("/api/categorias/99")
                 .with(csrf())
                 .contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isNotFound());
-        
-        verify(categoriaService).getById(99);
-        verify(categoriaService, never()).delete(99);
+            .andExpect(status().isNoContent());
+
+        verify(categoriaService).delete(99);
+        verify(categoriaService, never()).getById(anyInt());
     }
+
 }
